# 2025_master_thesis_leopold_bodamer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  MIGRATION_README.md  MastersDoctoralThesis.cls  README.md  TEST PHASE FAKTOR.ods  customstyle_bibiliography.bbx  environment.yml  estimation_proteus.ods  leoenv_bckp.yml  main.blg  main.tex  plot_2D_datas.slurm  plot_datas.slurm  requirements.txt  run_1D_datas.slurm  run_2D_datas.slurm  submit_job.slurm  two_d_data.pkl
code/python/: I_for_proteus.py  I_with_proteus.py  README.md  __init__.py  annas_code.py  bath_constants.py  bootstrap_paths.py  custom_result.py  functions2DES.py  functions_for_both_cases.py  functions_indep.py  papers_with_proteus.py  paths.py  plot_pkl_data.py  plot_settings.py  pyproject.toml  qubit_with_brmesolve.ipynb  replicate_paper.ipynb  replicate_paper_I_and_II.ipynb  replicate_paper_eqs.ipynb  replicate_paper_eqs_I.ipynb  replicate_paper_eqs_II.ipynb  requirements.txt  setup.py  test_baths.py  test_cell_corrected.py  test_length_consistency.py  test_pulses.ipynb  two_d_data_tmax10.0_spacing0.5.pkl  two_d_data_tmax100.0_spacing0.5_1.pkl  two_d_data_tmax600.0_spacing1.0.pkl
code/python/.ipynb_checkpoints/: test_pulses-checkpoint.ipynb
code/python/archive/: verify_averaged_data.py
code/python/archive/Qubit_bath_test/: Qubit_with_brmesolve.ipynb
code/python/archive/full_system/: system_coupled_to_classical_Field.ipynb
code/python/config/: __init__.py  mpl_tex_settings.py  paths.py  settings.py  supercomputer_config.py
code/python/master_thesis_2des.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
code/python/not_needed_atm/: system_coupled_to_cavity_mode.ipynb
code/python/notebooks/: BRMESOLVE_tls_tutorial.ipynb  mpl_tex_settings_example.ipynb  replicate_paper.ipynb  test_TeX_plots.ipynb  test_baths.ipynb  test_calculations.ipynb  test_inhomogenity.ipynb  test_parallel_compute_1d_e_comps.ipynb  test_photon_echo.ipynb  test_pulses.ipynb  test_redfield_tensor.ipynb  test_refactored_system.ipynb  test_spectroscopy.ipynb  test_system_N_atoms.ipynb
code/python/plotstyle/: __init__.py  constants.py  style.py
code/python/plotstyle/plotstyle/: style.py
code/python/project_config/: __init__.py  logging_setup.py  paths.py
code/python/qspectro2d/: .gitignore  CHANGES_STEPWISE.md  __init__.py  constants.py  environment.yml  pyproject.toml
code/python/qspectro2d/baths/: __init__.py  bath_fcts.py  bath_parameters.py
code/python/qspectro2d/config/: __init__.py  create_sim_obj.py  default_simulation_params.py  loader.py  models.py  mpl_tex_settings.py  paths.py
code/python/qspectro2d/core/: __init__.py  atom_bath_class.py  coupling_class.py  functions_with_rwa.py  pulse_functions.py  pulse_sequences.py  simulation_class.py  simulation_parameters  simulation_parameters.py  solver_fcts.py  system_bath_class.py  system_laser_class.py  system_parameters.py  utils_and_config.py
code/python/qspectro2d/data/: __init__.py  files.py  io.py
code/python/qspectro2d/qspectro2d/: __init__.py
code/python/qspectro2d/simulation/: __init__.py  runners.py  utils.py
code/python/qspectro2d/spectroscopy/: __init__.py  calculations copy.py  calculations.py  inhomogenity.py  one_d_field.py  polarization.py  post_processing.py  solver_check.py
code/python/qspectro2d/utils/: __init__.py  data_io.py  file_naming.py  files.py  simulation_utils.py  test_file_naming.py  units_and_rwa.py
code/python/qspectro2d/visualization/: __init__.py  data_plots.py  mpl_tex_settings.py  plotting.py  plotting_functions.py
code/python/scripts/: MIGRATION_README.md  README_UNIFIED_STRUCTURE.md  WORKFLOW_CHANGES.md  analyze_data_formats_simple.py  average_1D_datas.py  average_pkl_files.py  average_simulation_data.py  calc_1D_datas.py  calc_2D_datas.py  calc_2D_datas_hpc.py  calc_data.py  calc_datas.py  calc_fixed_tau_T.py  common_fcts.py  config.yaml  functions_with_rwa.py  gen_2d_batches.py  gen_run_2d_batches.py  hpc_calc_2d_datas.py  hpc_calc_datas.py  hpc_plot_datas.py  inhom_stack_1d.py  optimize_bath_parameters.py  plot_1D_datas.py  plot_2D_datas.py  plot_2D_datas.slurm  plot_data.py  plot_datas.py  plot_datas.slurm  plot_pkl_data.py  prepare_tau_coh_jobs.py  run_1D_datas.slurm  run_2D_datas.slurm  run_calc_1D_datas.slurm  run_calc_2D_datas.slurm  run_calc_and_plot_1D.slurm  run_calc_and_plot_2D.slurm  slurm_1d_workflow.slurm  slurm_2d_workflow.slurm  stack_1dto2d.py  (+12 more)
code/python/scripts/batch_jobs/: slurm_2d_b000_of_001.slurm
code/python/scripts/not needed scripts/: slurm_2d_workflow.slurm
code/python/src/: __init__.py
code/python/tests/: test_baths.py  test_pulses.ipynb  test_spectroscopy.ipynb
(+197 files in other folders)
