[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qspectro2d"
version = "0.1.0"
description = "Quantum 2D Electronic Spectroscopy toolkit for Open Quantum Systems"
authors = [{name = "Leopold"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["spectroscopy", "open quantum systems", "qutip", "2D"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "matplotlib",
  "qutip",
  "PyYAML",
  "psutil",
]

[project.optional-dependencies]
plotting = ["plotstyle>=0.1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["qspectro2d*"]
exclude = ["tests*"]
